Camino only - Bug 481133: shut down form fill controllers when embedding shuts down. r/sr=pink